--- a/idsd.html
+++ b/idsd.html
@@ -11,16 +11,13 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>ENET'Com</h1>
+                <h1><a href="index.html">ENET'Com</a></h1>
                 <p>École Nationale d'Électronique et des Télécommunications de Sfax</p>
             </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="idsd.html" class="active">IDSD</a></li>
-                    <li><a href="gii.html">GII</a></li>
-                    <li><a href="gt.html">GT</a></li>
-                    <li><a href="gec.html">GEC</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
@@ -48,8 +45,6 @@
 
             <div class="year-navigation">
                 <a href="idsd-year1.html" class="btn">First Year</a>
-                <a href="idsd-year2.html" class="btn">Second Year</a>
-                <a href="idsd-year3.html" class="btn">Third Year</a>
             </div>
 
 
@@ -58,12 +53,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 ENET'Com. All rights reserved.</p>
-            <div class="social-links">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-            </div>
+            <p>&copy; 2025 ENET'Com. All rights reserved.</p>
         </div>
     </footer>
 
