--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>ENET'Com</h1>
+                <h1><a href="index.html">ENET'Com</a></h1>
                 <p>École Nationale d'Électronique et des Télécommunications de Sfax</p>
             </div>
             <nav>
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="idsd.html">IDSD</a></li>
-                    <li><a href="gii.html">GII</a></li>
-                    <li><a href="gt.html">GT</a></li>
-                    <li><a href="gec.html">GEC</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
@@ -49,33 +46,14 @@
                     <p>Data Science and Decision Engineering</p>
                     <a href="idsd.html" class="btn">Browse Documents</a>
                 </div>
-                <div class="branch">
-                    <h3>GII</h3>
-                    <p>Computer and Industrial Engineering</p>
-                    <a href="gii.html" class="btn">Browse Documents</a>
-                </div>
-                <div class="branch">
-                    <h3>GT</h3>
-                    <p>Telecommunications Engineering</p>
-                    <a href="gt.html" class="btn">Browse Documents</a>
-                </div>
-                <div class="branch">
-                    <h3>GEC</h3>
-                    <p>Electronics and Communications Engineering</p>
-                    <a href="gec.html" class="btn">Browse Documents</a>
-                </div>
             </div>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 ENET'Com. All rights reserved.</p>
-            <div class="social-links">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-            </div>
+            <p>&copy; 2025 ENET'Com. All rights reserved.</p>
+
         </div>
     </footer>
 
