--- a/about.html
+++ b/about.html
@@ -11,16 +11,13 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>ENET'Com</h1>
+                <h1><a href="index.html">ENET'Com</a></h1>
                 <p>École Nationale d'Électronique et des Télécommunications de Sfax</p>
             </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="idsd.html">IDSD</a></li>
-                    <li><a href="gii.html">GII</a></li>
-                    <li><a href="gt.html">GT</a></li>
-                    <li><a href="gec.html">GEC</a></li>
                     <li><a href="about.html" class="active">About</a></li>
                 </ul>
             </nav>
