--- a/idsd-year1.html
+++ b/idsd-year1.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>ENET'Com</h1>
+                <h1><a href="index.html">ENET'Com</a></h1>
                 <p>École Nationale d'Électronique et des Télécommunications de Sfax</p>
             </div>
             <nav>
