add py and Idsd 1year and Gec 2nd year

--- a/gt-year2.html
+++ b/gt-year2.html
@@ -21,6 +21,7 @@
                     <li><a href="gii.html">GII</a></li>
                     <li><a href="gt.html" class="active">GT</a></li>
                     <li><a href="gec.html">GEC</a></li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
             <div class="menu-toggle">
@@ -46,7 +47,6 @@
             </div>
 
             <div class="year-navigation">
-                <a href="gt.html" class="btn">Overview</a>
                 <a href="gt-year1.html" class="btn">First Year</a>
                 <a href="gt-year2.html" class="btn active">Second Year</a>
                 <a href="gt-year3.html" class="btn">Third Year</a>
@@ -185,12 +185,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 ENET'Com. All rights reserved.</p>
-            <div class="social-links">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-            </div>
+            <p>&copy; 2025 ENET'Com. All rights reserved.</p>
         </div>
     </footer>
 
