--- a/idsd.html
+++ b/idsd.html
@@ -18,6 +18,9 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="idsd.html" class="active">IDSD</a></li>
+                    <li><a href="gii.html">GII</a></li>
+                    <li><a href="gt.html">GT</a></li>
+                    <li><a href="gec.html">GEC</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
