--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="idsd.html">IDSD</a></li>
+                    <li><a href="gii.html">GII</a></li>
+                    <li><a href="gt.html">GT</a></li>
+                    <li><a href="gec.html">GEC</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
@@ -33,7 +36,7 @@
             <p>Access course materials, lecture notes, and academic resources organized by years, semesters, and subjects</p>
         </div>
     </section>
-
+ 
     <section class="programs">
         <div class="container">
             <div class="branches">
@@ -42,7 +45,21 @@
                     <p>Data Science and Decision Engineering</p>
                     <a href="idsd.html" class="btn">Browse Documents</a>
                 </div>
-            </div>
+                <div class="branch">
+                    <h3>GII</h3>
+                    <p>Industrial Computer Engineering</p>
+                    <a href="gii.html" class="btn">Browse Documents</a>
+                </div>
+                <div class="branch">
+                    <h3>GT</h3>
+                    <p>Telecommunication Engineering</p>
+                    <a href="gt.html" class="btn">Browse Documents</a>
+                </div>
+                <div class="branch">
+                    <h3>GEC</h3>
+                    <p>Engineering of Electronic Communication Systems</p>
+                    <a href="gec.html" class="btn">Browse Documents</a>
+                </div>
         </div>
     </section>
 
