--- a/about.html
+++ b/about.html
@@ -18,6 +18,9 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="idsd.html">IDSD</a></li>
+                    <li><a href="gii.html">GII</a></li>
+                    <li><a href="gt.html">GT</a></li>
+                    <li><a href="gec.html" >GEC</a></li>
                     <li><a href="about.html" class="active">About</a></li>
                 </ul>
             </nav>
