--- a/idsd-year1.html
+++ b/idsd-year1.html
@@ -18,6 +18,9 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="idsd.html" class="active">IDSD</a></li>
+                    <li><a href="gii.html">GII</a></li>
+                    <li><a href="gt.html">GT</a></li>
+                    <li><a href="gec.html">GEC</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
@@ -44,6 +47,8 @@
 
             <div class="year-navigation">
                 <a href="idsd-year1.html" class="btn active">First Year</a>
+                <a href="idsd-year2.html" class="btn">Second Year</a>
+                <a href="idsd-year3.html" class="btn">Third Year</a>
             </div>
 
 
