--- a/idsd-year2.html
+++ b/idsd-year2.html
@@ -21,6 +21,7 @@
                     <li><a href="gii.html">GII</a></li>
                     <li><a href="gt.html">GT</a></li>
                     <li><a href="gec.html">GEC</a></li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
             <div class="menu-toggle">
