add py and Idsd 1year and Gec 2nd year

--- a/idsd.html
+++ b/idsd.html
@@ -48,6 +48,8 @@
 
             <div class="year-navigation">
                 <a href="idsd-year1.html" class="btn">First Year</a>
+                <a href="idsd-year2.html" class="btn">Second Year</a>
+                <a href="idsd-year3.html" class="btn">Third Year</a>
             </div>
 
 
