--- a/gt-year2.html
+++ b/gt-year2.html
@@ -59,126 +59,130 @@
                 <h3>Second Year</h3>
                 
                 <!-- First Semester -->
-                <h4 class="semester-title">Semester 1</h4>
-                <div class="course-list">
-                    <!-- Computer Networks -->
-                    <div class="course-card">
-                        <h4>Computer Networks</h4>
-                        <div class="document-list">
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2023/network_protocols.pdf" target="_blank">Network Protocols</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2023/tcp_ip.pdf" target="_blank">TCP/IP Architecture</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2023/network_security_protocols.pdf" target="_blank">Network Security Protocols</a>
+                <details>
+                    <summary class="semester-title">Semester 1</summary>
+                    <div class="course-list">
+                        <!-- Computer Networks -->
+                        <div class="course-card">
+                            <h4>Computer Networks</h4>
+                            <div class="document-list">
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2023/network_protocols.pdf" target="_blank">Network Protocols</a>
+                                </div>
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2023/tcp_ip.pdf" target="_blank">TCP/IP Architecture</a>
+                                </div>
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2023/network_security_protocols.pdf" target="_blank">Network Security Protocols</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <!-- Optical Communications -->
-                    <div class="course-card">
-                        <h4>Optical Communications</h4>
-                        <div class="document-list">
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2023/optical_fibers.pdf" target="_blank">Optical Fibers</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2023/wdm_systems.pdf" target="_blank">WDM Systems</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2023/optical_networks.pdf" target="_blank">Optical Networks</a>
+                        <!-- Optical Communications -->
+                        <div class="course-card">
+                            <h4>Optical Communications</h4>
+                            <div class="document-list">
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2023/optical_fibers.pdf" target="_blank">Optical Fibers</a>
+                                </div>
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2023/wdm_systems.pdf" target="_blank">WDM Systems</a>
+                                </div>
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2023/optical_networks.pdf" target="_blank">Optical Networks</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <!-- Digital Communications -->
-                    <div class="course-card">
-                        <h4>Digital Communications</h4>
-                        <div class="document-list">
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2023/modulation_techniques.pdf" target="_blank">Modulation Techniques</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2023/error_correction.pdf" target="_blank">Error Detection and Correction</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2023/channel_coding.pdf" target="_blank">Channel Coding</a>
+                        <!-- Digital Communications -->
+                        <div class="course-card">
+                            <h4>Digital Communications</h4>
+                            <div class="document-list">
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2023/modulation_techniques.pdf" target="_blank">Modulation Techniques</a>
+                                </div>
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2023/error_correction.pdf" target="_blank">Error Detection and Correction</a>
+                                </div>
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2023/channel_coding.pdf" target="_blank">Channel Coding</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </details>
                 
                 <!-- Second Semester -->
-                <h4 class="semester-title">Semester 2</h4>
-                <div class="course-list">
-                    <!-- Mobile Communications -->
-                    <div class="course-card">
-                        <h4>Mobile Communications</h4>
-                        <div class="document-list">
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2022/wireless_communications.pdf" target="_blank">Wireless Communications</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2022/cellular_networks.pdf" target="_blank">Cellular Networks</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2022/5g_technology.pdf" target="_blank">5G Technology</a>
+                <details>
+                    <summary class="semester-title">Semester 2</summary>
+                    <div class="course-list">
+                        <!-- Mobile Communications -->
+                        <div class="course-card">
+                            <h4>Mobile Communications</h4>
+                            <div class="document-list">
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2022/wireless_communications.pdf" target="_blank">Wireless Communications</a>
+                                </div>
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2022/cellular_networks.pdf" target="_blank">Cellular Networks</a>
+                                </div>
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2022/5g_technology.pdf" target="_blank">5G Technology</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <!-- Antennas and Propagation -->
-                    <div class="course-card">
-                        <h4>Antennas and Propagation</h4>
-                        <div class="document-list">
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2022/antenna_theory.pdf" target="_blank">Antenna Theory</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2022/wave_propagation.pdf" target="_blank">Wave Propagation</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2022/mimo_systems.pdf" target="_blank">MIMO Systems</a>
+                        <!-- Antennas and Propagation -->
+                        <div class="course-card">
+                            <h4>Antennas and Propagation</h4>
+                            <div class="document-list">
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2022/antenna_theory.pdf" target="_blank">Antenna Theory</a>
+                                </div>
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2022/wave_propagation.pdf" target="_blank">Wave Propagation</a>
+                                </div>
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2022/mimo_systems.pdf" target="_blank">MIMO Systems</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <!-- Network Security -->
-                    <div class="course-card">
-                        <h4>Network Security</h4>
-                        <div class="document-list">
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2022/cryptography.pdf" target="_blank">Cryptography</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2022/network_security_principles.pdf" target="_blank">Network Security Principles</a>
-                            </div>
-                            <div class="document-item">
-                                <i class="fas fa-file-pdf"></i>
-                                <a href="documents/gt/2022/secure_protocols.pdf" target="_blank">Secure Communication Protocols</a>
+                        <!-- Network Security -->
+                        <div class="course-card">
+                            <h4>Network Security</h4>
+                            <div class="document-list">
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2022/cryptography.pdf" target="_blank">Cryptography</a>
+                                </div>
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2022/network_security_principles.pdf" target="_blank">Network Security Principles</a>
+                                </div>
+                                <div class="document-item">
+                                    <i class="fas fa-file-pdf"></i>
+                                    <a href="documents/gt/2022/secure_protocols.pdf" target="_blank">Secure Communication Protocols</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </details>
             </div>
         </div>
     </section>
@@ -190,5 +194,6 @@
     </footer>
 
     <script src="js/script.js"></script>
+
 </body>
 </html>
