--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Plateforme de partage des cours, TD, TP et examens pour les étudiants de l’ENET’Com Sfax. Parcours GEC, GT, GII, IDSD et LTIC.">
+    <meta name="keywords" content="ENET'Com, Sfax, GEC, GT, GII, IDSD, LTIC, cours, TD, TP, examens">
     <title>ENET'Com Academic Archive</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
