--- a/about.html
+++ b/about.html
@@ -6,12 +6,16 @@
     <title>About Me - ENET'Com Academic Archive</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+    <link rel="manifest" href=icons"/site.webmanifest">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <h1><a href="index.html">ENET'Com</a></h1>
+                <a href="index.html"><img src="icons/enetdocs.png" alt="ENET'Com Docs"></a>
                 <p>École Nationale d'Électronique et des Télécommunications de Sfax</p>
             </div>
             <nav>
@@ -43,9 +47,9 @@
                 <p><i class="fas fa-user"></i> About the Creator</p>
             </div>
             
-            <div class="course-card" style="max-width: 800px; margin: 0 auto;">
+            <div class="about-me">
                 <div style="padding: 20px;">
-                    <p>This website was created by Adem Taktek, an engineering student at ENET'Com, with the aim of making academic documents easily accessible for all students across the four branches: IDSD, GII, GT, and GEC.</p>
+                    <p>This website was created by Adem Taktek, an engineering student at ENET'Com, with the aim of making academic documents easily accessible for all students across the four branches: IDSD, GII, GT, GEC and LTIC.</p>
                     <br>
                     <p>It serves as a centralized archive for course materials, exams, and useful resources to help students succeed in their academic journey.</p>
                     <br>
