--- a/gii.html
+++ b/gii.html
@@ -6,12 +6,16 @@
     <title>GII - ENET'Com Academic Archive</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+    <link rel="manifest" href="icons/site.webmanifest">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <h1>ENET'Com</h1>
+                <a href="index.html"><img src="icons/enetdocs.png" alt="ENET'Com Docs"></a>
                 <p>École Nationale d'Électronique et des Télécommunications de Sfax</p>
             </div>
             <nav>
@@ -58,7 +62,12 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 ENET'Com. All rights reserved.</p>
+            <div class="footer-content">
+                <div class="footer-info">
+                    <p>&copy; 2025 ENET'Com. All rights reserved.</p>
+                </div>
+
+            </div>
         </div>
     </footer>
 
